# DroidconSecuritySample

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts  class-dictionary.txt  method-dictionary.txt  proguard-rules.pro
app/src/androidTest/java/com/example/droidconsecuritysample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  secret_key.cpp
app/src/main/java/com/example/droidconsecuritysample/: DroidconSecurityApplication.kt
app/src/main/java/com/example/droidconsecuritysample/common/di/: ApplicationScope.kt  CommonActivityModule.kt  PerActivity.kt
app/src/main/java/com/example/droidconsecuritysample/ui/: KeyInputBottomSheet.kt  MainActivity.kt  PaidActivity.kt
app/src/main/java/com/example/droidconsecuritysample/util/: ApiCallBack.kt  CommonTasks.kt  Constant.kt  CryptoUtils.kt  CustomInterceptor.kt  ExtensionUtils.kt  SecurityUtils.kt
app/src/main/res/drawable/: bg_custom_loader.xml
app/src/main/res/layout/: activity_main.xml  activity_paid.xml  activity_post.xml  bottom_sheet_key_input.xml  dialog_custom_loader.xml  item_post.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/droidconsecuritysample/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+31 files in other folders)
